tests/dataset/tpc-ds/compiler/c/q5.error
/tmp/TestCCompiler_TPCDS_Goldenq51838602042/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq51838602042/001/prog.c:156:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  156 |     _json_string(it.channel);
      |                  ~~^~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq51838602042/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq51838602042/001/prog.c:160:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  160 |     _json_string(it.id);
      |                  ~~^~~
/tmp/TestCCompiler_TPCDS_Goldenq51838602042/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq51838602042/001/prog.c:176:33: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  176 |   test_TPCDS_Q5_result_result = result;
      |                                 ^~~~~~
