tests/dataset/tpc-ds/compiler/c/q5.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:35Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:35Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  const char *channel;
  const char *id;
  double sales;
  double returns;
  double profit;
} result_t;
typedef struct {
  int len;
  result_t *data;
} result_list_t;
result_list_t create_result_list(int len) {
  result_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q5_result_result;
static void test_TPCDS_Q5_result() {
  if (!(test_TPCDS_Q5_result_result.len == 3)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  result_t result[] = {(result_t){.channel = "catalog channel",
                                  .id = "catalog_page100",
                                  .sales = 30.0,
                                  .returns = 3.0,
                                  .profit = 8.0},
                       (result_t){.channel = "store channel",
                                  .id = "store10",
                                  .sales = 20.0,
                                  .returns = 2.0,
                                  .profit = 4.0},
                       (result_t){.channel = "web channel",
                                  .id = "web_site200",
                                  .sales = 40.0,
                                  .returns = 4.0,
                                  .profit = 10.0}};
  int result_len = sizeof(result) / sizeof(result[0]);
  printf("[");
  for (int i1 = 0; i1 < result_len; i1++) {
    if (i1 > 0)
      printf(",");
    result_t it = result[i1];
    printf("{");
    _json_string("channel");
    printf(":");
    _json_string(it.channel);
    printf(",");
    _json_string("id");
    printf(":");
    _json_string(it.id);
    printf(",");
    _json_string("sales");
    printf(":");
    _json_float(it.sales);
    printf(",");
    _json_string("returns");
    printf(":");
    _json_float(it.returns);
    printf(",");
    _json_string("profit");
    printf(":");
    _json_float(it.profit);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q5_result_result = result;
  test_TPCDS_Q5_result();
  return 0;
}
